return missing habitat figures

--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -201,7 +201,6 @@ Each variable is modelled with the same covariates.
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
         title= paste( snowcrab_filter_class, "Probability")  
 
-          # if (vns=="habitat") {
           #   # to compute habitat prob
           #   sims = carstm_posterior_simulations( pH=pH, pa_threshold=0.05, qmax=0.95 )
           #   SM = aggregate_simulations( 
@@ -218,7 +217,7 @@ Each variable is modelled with the same covariates.
           #   vn = paste("habitat", "predicted", sep=".")
           #   outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_habitat" )
 
-          # }         
+
       
       }
 
@@ -371,6 +370,26 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
       fn_ts = "biomass_M0.png"
       vn = paste("biomass", "predicted", sep=".")
       outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_biomass_densities" )
+    }  
+
+
+    if (vns=="habitat") {
+      sims = carstm_posterior_simulations( pH=pH, pa_threshold=0.05, qmax=0.95 )
+      SM = aggregate_simulations( 
+        sims=sims, 
+        sppoly=sppoly, 
+        fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ), 
+        yrs=pN$yrs, 
+        method="mean", 
+        redo=TRUE 
+      ) 
+      # units: probability
+      # note: using pN, even though this is habitat 
+      outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "aggregated_habitat_timeseries" )
+      ylabel = "Habitat probability"
+      fn_ts = "habitat_M0.png"
+      vn = paste("habitat", "predicted", sep=".")
+      outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_habitat" )
 
     }  
 
