--- a/inst/scripts/51_bycatch.qmd
+++ b/inst/scripts/51_bycatch.qmd
@@ -4,15 +4,19 @@ author: "Jae S. Choi"
 toc: true
 number-sections: true
 highlight-style: pygments
+editor:
+  render-on-save: true
 format:
   html: 
     code-fold: true
     html-math-method: katex
   pdf:
+    pdf-engine: lualatex
     geometry: 
       - top=30mm
       - left=30mm
   docx: default 
+
 ---
 
 # Approach: estimate bycatch from at seas observed data and project onto marfis data
