--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -438,52 +438,101 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
   
     fn = file.path( outputdir, fn_ts )
 
-    out = ggplot(tdb, aes(x=year, y=mean, fill=region, colour=region)) +
-      geom_line( alpha=0.9, linewidth=1.2 ) +
-      geom_point(aes(shape=region), size=3, alpha=0.7 ) +
-      geom_errorbar(aes(ymin=lb,ymax=ub), linewidth=0.8, alpha=0.8, width=0.3)  +
-      labs(x="Year/Année", y="Biomass index (kt) / Indice de biomasse (kt)", size = rel(1.5)) +
-      scale_colour_manual(values=color_map) +
-      scale_fill_manual(values=color_map) +
-      scale_shape_manual(values = c(15, 17, 19)) +
-      theme_light( base_size = 22) + 
-      theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) +
-      scale_y_break(c(14, 28), scales = 1)
+    if (vns=="abundance") {
+      out = ggplot(tdb, aes(x=year, y=mean, fill=region, colour=region)) +
+        geom_line( alpha=0.9, linewidth=1.2 ) +
+        geom_point(aes(shape=region), size=3, alpha=0.7 ) +
+        geom_errorbar(aes(ymin=lb,ymax=ub), linewidth=0.8, alpha=0.8, width=0.3)  +
+        labs(x="Year/Année", y="Biomass index (kt) / Indice de biomasse (kt)", size = rel(1.5)) +
+        scale_colour_manual(values=color_map) +
+        scale_fill_manual(values=color_map) +
+        scale_shape_manual(values = c(15, 17, 19)) +
+        theme_light( base_size = 22) + 
+        theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) +
+        scale_y_break(c(14, 28), scales = 1)
+        # scale_y_continuous( limits=c(0, 300) )  
+        ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+
+        print(out)
+            # map it ..mean density
+    
+        if ( !file.exists(outputdir2)) dir.create( outputdir2, recursive=TRUE, showWarnings=FALSE )
+
+        B = apply( sims, c(1,2), mean )  # sims units (kt);  
+        B[ which(!is.finite(B)) ] = NA
+
+        # brks = pretty( log10( quantile( B[], probs=c(0.05, 0.95), na.rm=TRUE )* 10^6)  )
+        sa = units::drop_units(sppoly$au_sa_km2)
+        brks = pretty( ( quantile( log(B * 10^6 / sa), probs=c(0.05, 0.95), na.rm=TRUE ))  )
       
-      # scale_y_continuous( limits=c(0, 300) )  
-      ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+        for (i in 1:length(pN$yrs) ) {
+          y = as.character( pN$yrs[i] )
+          # u = log10( B[,y]* 10^6 )   ## Total kt->kg: log10( kg )
+          u = log( B[,y]* 10^6 / sa) # ;; density  log10( kg /km^2 )
+          
+          sppoly[,vn] = u
+          outfilename = file.path( outputdir2 , paste( "biomass", y, "png", sep=".") )
+          carstm_map(  sppoly=sppoly, vn=vn,
+              breaks=brks,
+              additional_features=additional_features,
+              legend.position=c( 0.1, 0.9 ),
+              annotation=y,
+              # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
+              colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
+              outfilename=outfilename
+          )
 
-    print(out)
+        } # end year loop
 
-    # map it ..mean density
- 
-    if ( !file.exists(outputdir2)) dir.create( outputdir2, recursive=TRUE, showWarnings=FALSE )
+    }
 
-    B = apply( sims, c(1,2), mean )  # sims units (kt);  
-    B[ which(!is.finite(B)) ] = NA
+    if (vns=="habitat") {
+      out = ggplot(tdb, aes(x=year, y=mean, fill=region, colour=region)) +
+        geom_line( alpha=0.9, linewidth=1.2 ) +
+        geom_point(aes(shape=region), size=3, alpha=0.7 ) +
+        geom_errorbar(aes(ymin=lb,ymax=ub), linewidth=0.8, alpha=0.8, width=0.3)  +
+        labs(x="Year/Année", y="Viable habitat (probability) / Habitat viale (probabilité)", size = rel(1.5)) +
+        scale_colour_manual(values=color_map) +
+        scale_fill_manual(values=color_map) +
+        scale_shape_manual(values = c(15, 17, 19)) +
+        theme_light( base_size = 22) + 
+        theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) 
+        # scale_y_continuous( limits=c(0, 300) )  
+        ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
 
-    # brks = pretty( log10( quantile( B[], probs=c(0.05, 0.95), na.rm=TRUE )* 10^6)  )
-    sa = units::drop_units(sppoly$au_sa_km2)
-    brks = pretty( ( quantile( log(B * 10^6 / sa), probs=c(0.05, 0.95), na.rm=TRUE ))  )
+        print(out)
+    
+        if ( !file.exists(outputdir2)) dir.create( outputdir2, recursive=TRUE, showWarnings=FALSE )
+
+        B = apply( sims, c(1,2), mean )  # sims units (kt);  
+        B[ which(!is.finite(B)) ] = NA
+
+        # brks = pretty( log10( quantile( B[], probs=c(0.05, 0.95), na.rm=TRUE )* 10^6)  )
+        sa = units::drop_units(sppoly$au_sa_km2)
+        brks = pretty( c(0, 1)  )
+      
+        for (i in 1:length(pN$yrs) ) {
+          y = as.character( pN$yrs[i] )
+          # u = log10( B[,y]* 10^6 )   ## Total kt->kg: log10( kg )
+          u =  B[,y] 
+
+          sppoly[,vn] = u
+          outfilename = file.path( outputdir2 , paste( "habitat", y, "png", sep=".") )
+          carstm_map(  sppoly=sppoly, vn=vn,
+              breaks=brks,
+              additional_features=additional_features,
+              legend.position=c( 0.1, 0.9 ),
+              annotation=y,
+              # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
+              colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
+              outfilename=outfilename
+          )
+
+        } # end year loop
   
-    for (i in 1:length(pN$yrs) ) {
-      y = as.character( pN$yrs[i] )
-      # u = log10( B[,y]* 10^6 )   ## Total kt->kg: log10( kg )
-      u = log( B[,y]* 10^6 / sa) # ;; density  log10( kg /km^2 )
-      
-      sppoly[,vn] = u
-      outfilename = file.path( outputdir2 , paste( "biomass", y, "png", sep=".") )
-      carstm_map(  sppoly=sppoly, vn=vn,
-          breaks=brks,
-          additional_features=additional_features,
-          legend.position=c( 0.1, 0.9 ),
-          annotation=y,
-          # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
-          colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
-          outfilename=outfilename
-      )
+    }
 
-    } # end year loop
+  
   
   }  # end vns loop
 
