return missing habitat figures

--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -491,7 +491,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
         geom_line( alpha=0.9, linewidth=1.2 ) +
         geom_point(aes(shape=region), size=3, alpha=0.7 ) +
         geom_errorbar(aes(ymin=lb,ymax=ub), linewidth=0.8, alpha=0.8, width=0.3)  +
-        labs(x="Year/Année", y="Viable habitat (probability) / Habitat viale (probabilité)", size = rel(1.5)) +
+        labs(x="Year/Année", y="Viable habitat (probability) /\nHabitat viable (probabilité)", size = rel(1.0)) +
         scale_colour_manual(values=color_map) +
         scale_fill_manual(values=color_map) +
         scale_shape_manual(values = c(15, 17, 19)) +
